--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "cartalyst/converter": "^7.0",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/breeze": "^1.19",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
+        "realrashid/sweet-alert": "^6.0",
         "yajra/laravel-datatables-oracle": "^10.3"
     },
     "require-dev": {
