--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
         "realrashid/sweet-alert": "^6.0",
+        "spatie/laravel-permission": "^5.10",
         "yajra/laravel-datatables-oracle": "^10.3"
     },
     "require-dev": {
