--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
+        "midtrans/midtrans-php": "^2.5",
         "realrashid/sweet-alert": "^6.0",
         "spatie/laravel-permission": "^5.10",
         "yajra/laravel-datatables-oracle": "^10.3"
