edit vercel json

--- a/vercel.json
+++ b/vercel.json
@@ -10,10 +10,10 @@
         }
     ],
     "env": {
-        "APP_NAME": "Laravel Vercel",
+        "APP_NAME": "Family Bakery",
         "APP_ENV": "production",
-        "APP_DEBUG": "false",
-        "APP_URL": "https://laravel-vercel.vercel.app",
+        "APP_DEBUG": "true",
+        "APP_URL": "https://family-bakery.vercel.app",
 
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
