--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "midtrans/midtrans-php": "^2.5",
         "realrashid/sweet-alert": "^6.0",
         "spatie/laravel-permission": "^5.10",
-        "yajra/laravel-datatables-oracle": "^10.3"
+        "yajra/laravel-datatables-oracle": "^10.3",
+        "ext-openssl": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
